Fixed minor spacing issue on hero splash and fixed robots.txt

--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ p {
     font-size: 2em;
     color: #e0dbd0;
     font-family: 'Roboto';
-    margin: 0;
+    margin-right: 10px;
 }
 
 nav {
